Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15167

fallocate does not increase quota usage

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      Using "fallocate -l <size> <file>" to allocate space to <file> does not increase the quota usage for the affected user/group/project:

      # lfs quota -u 1000 /mnt/testfs
      Disk quotas for usr 1000 (uid 1000):
           Filesystem  kbytes   quota   limit   grace   files   quota   limit   grace
          /mnt/testfs  102408       0       0       -       3       0       0       -
      # lfs quota -g 1000 /mnt/testfs
      Disk quotas for grp 1000 (gid 1000):
           Filesystem  kbytes   quota   limit   grace   files   quota   limit   grace
          /mnt/testfs  102408       0       0       -       3       0       0       -
      # lfs quota -p 1000 /mnt/testfs
      Disk quotas for prj 1000 (pid 1000):
           Filesystem  kbytes   quota   limit   grace   files   quota   limit   grace
          /mnt/testfs  102408       0  204800       -       3       0   10000       -
      
      # fallocate -l 50M /mnt/testfs/projdir/50M
      # lfs quota -u 1000 /mnt/testfs
      Disk quotas for usr 1000 (uid 1000):
           Filesystem  kbytes   quota   limit   grace   files   quota   limit   grace
          /mnt/testfs  102408       0       0       -       4       0       0       -
      # lfs quota -g 1000 /mnt/testfs
      Disk quotas for grp 1000 (gid 1000):
           Filesystem  kbytes   quota   limit   grace   files   quota   limit   grace
          /mnt/testfs  102408       0       0       -       4       0       0       -
      # lfs quota -p 1000 /mnt/testfs
      Disk quotas for prj 1000 (pid 1000):
           Filesystem  kbytes   quota   limit   grace   files   quota   limit   grace
          /mnt/testfs  102408       0  204800       -       4       0   10000       -
      

      Unmounting and remounting the whole filesystem does not help, I needed to run "e2fsck -fy" on the OSTs in order to update the quota file.

            arshad512 Arshad Hussain
            adilger Andreas Dilger
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: